# gk-3d

./: .clang-format  CMakeLists.txt  main.cpp
include/: app.h  camera.h  common.h  renderer.h  shaders.h
shaders/: basic.vert
src/: app.cpp  camera.cpp  shaders.cpp
